# pretty-traceback

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  Makefile  Makefile.bootstrapit.make  README.md  bootstrapit.sh  docker_base.Dockerfile  license.header  makefile  makefile.bootstrapit.make  pylint-ignore.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
requirements/: development.txt  integration.txt  pypi.txt
scripts/: bootstrapit_update.sh  exit_0_if_empty.py
src/pretty_traceback/: __init__.py  _extension.py  common.py  formatting.py  hook.py  parsing.py  pytest_plugin.py
src/pretty_traceback2/: __init__.py  common.py  formatting.py  hook.py  parsing.py
test/: __init__.py  fixtures.py  test_formatting.py  test_parsing.py
