[project]
name = "pretty-traceback"
version = "2024.1021"
description = "Human readable stacktraces."
keywords = ["traceback", "stacktrace", "pretty"]

readme = "README.md"
requires-python = ">=2.7"

license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Manuel Barkhau", email = "mbarkhau@gmail.com" },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


dependencies = [
    "colorama<0.4,>=0.3.9;python_version<3.6",
    "colorama>=0.4;python_version>=3.6",
]

[project.urls]
Homepage = "https://github.com/mbarkhau/pretty-traceback"


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
