[project]
name = "pretty-traceback2"
version = "2024.1021"
description = "Human readable stacktraces."
keywords = ["traceback", "stacktrace", "pretty"]

readme = "README.md"
requires-python = ">=3.6"

license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Manuel Barkhau", email = "mbarkhau@gmail.com" },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


dependencies = [
    "colorama>=0.4",
]

[project.urls]
Homepage = "https://github.com/mbarkhau/pretty-traceback"


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[bumpver]
current_version = 2024.1021
version_pattern = "YYYY.BUILD[-PYTAGNUM]"
commit = true
tag = true
push = true

[bumpver.file_patterns]
"bootstrapit.sh" = [
    'PACKAGE_VERSION="{version}"'
]
"setup.cfg" = [
    'current_version = {version}'
]
"setup.py" = [
    'version="{version}"'
]
"src/pretty_traceback/*.py" = [
    'Copyright (c) 2020-YYYY Manuel Barkhau'
]
"src/pretty_traceback/__init__.py" = [
    '__version__ = "{version}"'
]
"README.md" = [
    '\[CalVer {version}\]',
    'https://img.shields.io/static/v1.svg?label=CalVer&message={version}&color=blue',
]


